agrega la documentacion a cada action del Controller

--- a/app/Resources/views/work/end_edit.html.twig
+++ b/app/Resources/views/work/end_edit.html.twig
@@ -7,7 +7,7 @@
 		<h2 class="text-center">Finalizar Documento</h2>
 		{% if work.documentFinished %}
 			<div class="row">
-			<p class="text-justify">El documento del trabajo <strong>{{ work.title }}</strong> ha sido finalizado. Esto significa que
+			<p class="text-center">El documento del trabajo <strong>{{ work.title }}</strong> ha sido finalizado. Esto significa que
 				ya no podr&aacute; ser editado.</p>
 			</div>
 		{% else %}
